--- a/cv.html
+++ b/cv.html
@@ -40,10 +40,10 @@
         </div>
 
         <ul>
-            <li><a href="default.asp">Expériences</a></li>
-            <li><a href="news.asp">Compétences</a></li>
-            <li><a href="contact.asp">Cursus</a></li>
-            <li><a href="about.asp">Créations</a></li>
+            <li><a href="experiences.asp">Expériences</a></li>
+            <li><a href="competences.asp">Compétences</a></li>
+            <li><a href="cursus.asp">Cursus</a></li>
+            <li><a href="creations.asp">Créations</a></li>
         </ul>
 
     </header>
@@ -89,21 +89,21 @@
         </p>
 
         <div class="container">
-            <div class="Dessin et techniques de graphismes">80%</div>
+            <div class="skills dessin">80%</div>
         </div>
 
         <p>Infographie Photoshop, Illustrator, Photophiltre
         </p>
 
         <div class="container">
-            <div class="Infographie Photoshop, Illustrator, Photophiltre">70%</div>
+            <div class="skills infographie">70%</div>
         </div>
 
         <p>Musicien semi-professionnel. Guitariste, batteur, percussionniste dans plusieurs groupes
         </p>
 
         <div class="container">
-            <div class="Musicien semi-professionnel. Guitariste, batteur, percussionniste dans plusieurs groupes">80%
+            <div class="skills musique">80%
             </div>
         </div>
 
@@ -138,6 +138,23 @@
 
 
 </body>
+
+<footer>
+    <div class="info-footer">
+        
+        <p><strong>Julien Gadion</strong><br />
+            Né le 12 janvier 1987</p>
+        <p>8 rue de la Maronne - 15250 Naucelles<br />
+            06 25 40 78 86<br />
+            legadijoncte@hotmail.fr</p>
+
+        <p>
+            <a href="https://github.com/juliengadion">Github</a>
+
+
+            <a href="https://www.linkedin.com/feed/?trk=onboarding-landing">linkedin</a>
+    </div>
+</footer>
 
 
 </html>
