--- a/cv.html
+++ b/cv.html
@@ -15,8 +15,10 @@
     <header>
 
         <div class="page">
-            <h1>Julien GADION
-
+            <div class="row">
+                <h1>Julien GADION
+            </div>
+            
             </h1>
             <div class="photo">
                 <img src="index.jpeg" alt="Photo Julien Gadion" />
@@ -62,7 +64,8 @@
                         apprentissage et formations d'enregistrement studio et d'ingénieur du son.
                     </p>
                     <p>
-                        2011 : Stage dans l'entrepeise IMAGIX formation de huits mois dans le secteur des TIC. Immerssion
+                        2011 : Stage dans l'entrepeise IMAGIX formation de huits mois dans le secteur des TIC.
+                        Immerssion
                         en
                         entreprise de création de site internet et formation de vendeur / démarcheur dans le secteur des
                         TIC
@@ -141,7 +144,7 @@
 
 <footer>
     <div class="info-footer">
-        
+
         <p><strong>Julien Gadion</strong><br />
             Né le 12 janvier 1987</p>
         <p>8 rue de la Maronne - 15250 Naucelles<br />
