--- a/cv.html
+++ b/cv.html
@@ -124,20 +124,52 @@
 
     <div class="créations">
         <h2>Créations</h2>
-        <img src="57034635_100388987833450_194185032049360896_n.jpg">
-        <img src="58802461_112068926665456_4067860472043405312_n.jpg">
-        <img src="58441870_112071363331879_6047847052698714112_n.jpg">
-        <img src="58419167_112074226664926_6031851280228417536_n.jpg">
-        <img src="59064648_112069793332036_3747104089515753472_n.jpg">
     </div>
 
 
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExanpleIndicators" data-slide-to="4"></li>
+        </ol>
 
 
 
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="57034635_100388987833450_194185032049360896_n.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="58802461_112068926665456_4067860472043405312_n.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="58441870_112071363331879_6047847052698714112_n.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="58419167_112074226664926_6031851280228417536_n.jpg" alt="Fourth slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="59064648_112069793332036_3747104089515753472_n.jpg" alt="Fifth slide">
+            </div>
+        </div>
 
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
-
+    <script>$('#myCarousel').on('slide.bs.carousel', function () {
+            // do something…
+        })
+    </script>
 
 
 </body>
@@ -156,6 +188,8 @@
 
 
             <a href="https://www.linkedin.com/feed/?trk=onboarding-landing">linkedin</a>
+
+
     </div>
 </footer>
 
