--- a/cv.html
+++ b/cv.html
@@ -41,12 +41,15 @@
 
         </div>
 
+        <nav class="menu">
+            
         <ul>
-            <li><a href="experiences.asp">Expériences</a></li>
-            <li><a href="competences.asp">Compétences</a></li>
-            <li><a href="cursus.asp">Cursus</a></li>
-            <li><a href="creations.asp">Créations</a></li>
+            <li><a href="#Experiences">Expériences</a></li>
+            <li><a href="#Competences">Compétences</a></li>
+            <li><a href="#Cursus">Cursus</a></li>
+            <li><a href="#Creations">Créations</a></li>
         </ul>
+        </nav>
 
     </header>
 
@@ -140,7 +143,7 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="57034635_100388987833450_194185032049360896_n.jpg" alt="First slide">
+                <img class="d-block w-100" src="59064648_112069793332036_3747104089515753472_n.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="58802461_112068926665456_4067860472043405312_n.jpg" alt="Second slide">
@@ -152,7 +155,7 @@
                 <img class="d-block w-100" src="58419167_112074226664926_6031851280228417536_n.jpg" alt="Fourth slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="59064648_112069793332036_3747104089515753472_n.jpg" alt="Fifth slide">
+                <img class="d-block w-100" src="57034635_100388987833450_194185032049360896_n.jpg" alt="Fifth slide">
             </div>
         </div>
 
