--- a/cv.html
+++ b/cv.html
@@ -93,9 +93,25 @@
         </div>
     </div>
 
+    <section>
+
 
     <aside>
         <h2>Compétences</h2>
+
+        <p>Sociabilité
+        </p>
+
+        <div class="container">
+            <div class="skills sociabilité">80%</div>
+        </div>
+
+        <p>Esprit d'équipe
+        </p>
+
+        <div class="container">
+            <div class="skills équipe">70%</div>
+        </div>
 
         <p>Dessin et techniques de graphismes
         </p>
@@ -120,7 +136,11 @@
         </div>
     </aside>
 
+</section>
 
+
+
+<section>
 
     <div class="cursus">
 
@@ -142,23 +162,39 @@
         </h2>
     </div>
 
+</section>
+
 
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
-                
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"> 
             </li>
+
             <li data-target="#carouselExampleIndicators" data-slide-to="1">
-
             </li>
+
             <li data-target="#carouselExampleIndicators" data-slide-to="2">
-
             </li>
+
             <li data-target="#carouselExampleIndicators" data-slide-to="3">
-
             </li>
-            <li data-target="#carouselExanpleIndicators" data-slide-to="4">
-                
+
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"> 
+            </li>
+
+            <li data-target="#carouselExampleIndicators" data-slide-to="5">
+            </li>
+
+            <li data-target="#carouselExampleIndicators" data-slide-to="6">   
+            </li>
+
+            <li data-target="#carouselExampleIndicators" data-slide-to="7">   
+            </li>
+
+            <li data-target="#carouselExampleIndicators" data-slide-to="8">   
+            </li>
+
+            <li data-target="#carouselExampleIndicators" data-slide-to="9">   
             </li>
         </ol>
 
@@ -166,21 +202,37 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="59064648_112069793332036_3747104089515753472_n.jpg" alt="First slide">
+                <img class="d-block w-100" src="femme.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="58802461_112068926665456_4067860472043405312_n.jpg" alt="Second slide">
+                <img class="d-block w-100" src="femme3.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="58441870_112071363331879_6047847052698714112_n.jpg" alt="Third slide">
+                <img class="d-block w-50" src="logo guigui 002.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="58419167_112074226664926_6031851280228417536_n.jpg" alt="Fourth slide">
+                <img class="d-block w-100" src="rey-an tring 2.jpg" alt="Fourth slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="57034635_100388987833450_194185032049360896_n.jpg" alt="Fifth slide">
+                <img class="d-block w-100" src="Sans titre 3.jpg" alt="Fifth slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="fond logo.jpg" alt="sixth slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="cheval 0023.jpg" alt="seventh slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="dess 2 ess 20.jpg" alt="eighth slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="dessin 003.jpg" alt="ninth slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="dessin1.jpg" alt="tenth slide">
             </div>
         </div>
+
 
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
